--- a/booking_chart/static/src/css/days.css
+++ b/booking_chart/static/src/css/days.css
@@ -56,10 +56,7 @@
     display: none;
 }
 .booking-chart-timelapses.zoom-xs .calendar-day-container div.resources {
-    background: url('../images/bg_week_xs.png');
-}
-.booking-chart-timelapses.zoom-xs .calendar-day-container.current div.resources {
-    background: url('../images/bg_week_xs.png'), url('../images/bg_today_xs.png');
+    background: url('../images/bg_day_hour_xs.png');
 }
 
 /* S size */
@@ -67,10 +64,24 @@
     display: none;
 }
 .booking-chart-timelapses.zoom-s .calendar-day-container div.resources {
-    background: url('../images/bg_week_s.png');
+    background: url('../images/bg_day_hour_s.png');
 }
-.booking-chart-timelapses.zoom-s .calendar-day-container.current div.resources {
-    background: url('../images/bg_week_s.png'), url('../images/bg_today_s.png');
+
+/* M size */
+.calendar-day-container div.resources {
+    background: url('../images/bg_day_hour.png');
+}
+.calendar-day-container div.resources .tooltip-info {
+    display: none;
+}
+.calendar-day-container div.resources .ellipsis.graph-name {
+    display: block;
+}
+.calendar-day-container div.resources .resource-group-bar {
+    height: 18px;
+}
+.calendar-day-container div.resources .resource-group-bar.multi .group-icon{
+    top: 4px;
 }
 
 /* L size */
@@ -78,10 +89,7 @@
     width: 6.4em;
 }
 .booking-chart-timelapses.zoom-l .calendar-day-container div.resources {
-    background: url('../images/bg_week_l.png');
-}
-.booking-chart-timelapses.zoom-l .calendar-day-container.current div.resources {
-    background: url('../images/bg_week_l.png'), url('../images/bg_today_l.png');
+    background: url('../images/bg_day_hour_l.png');
 }
 
 /* XL size */
@@ -89,8 +97,5 @@
     width: 12.8em;
 }
 .booking-chart-timelapses.zoom-xl .calendar-day-container div.resources {
-    background: url('../images/bg_week_xl.png');
-}
-.booking-chart-timelapses.zoom-xl .calendar-day-container.current div.resources {
-    background: url('../images/bg_week_xl.png'), url('../images/bg_today_xl.png');
+    background: url('../images/bg_day_hour_xl.png');
 }
